pushing some new html\css code

--- a/first web Page/myFirstWebPage.html
+++ b/first web Page/myFirstWebPage.html
@@ -29,7 +29,7 @@ body {
 
     <!-- External Links -->
     <a href="https://www.memedroid.com/memes/detail/3014619/Time-To-Shut-Down?refGallery=tags&page=1&tag=programming"
-    target="_blank"> <img src="https://img.icons8.com/office/80/000000/shutdown.png"/> </a>
+    target="_blank">  </a>
     <a href="https://www.memedroid.com/memes/detail/3001921/Emails?refGallery=tags&page=1&tag=programming" 
     target="_blank"> <img src="https://img.icons8.com/color/80/000000/deleted-message.png"/> </a>
     <a href="https://www.memedroid.com/memes/detail/2639341/gotta-teach-them-young?refGallery=tags&page=1&tag=programming" 
